# multi-party-schnorr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yaml
crates/sl-mpc-derive/: Cargo.toml
crates/sl-mpc-derive/src/: hard_derive.rs  lib.rs  math.rs  oracle.rs  protocol.rs
crates/sl-mpc-derive/src/hash_to_curve/: mod.rs
crates/sl-mpc-derive/src/impls/: mod.rs
crates/sl-mpc-derive/src/impls/ed25519/: hard_derive_signing.rs  hash_to_curve.rs  mod.rs
crates/sl-mpc-derive/src/impls/k256/: hard_derive_signing.rs  mod.rs
crates/sl-mpc-derive/src/impls/ristretto/: group.rs  hash_to_curve.rs  mod.rs  point.rs
crates/sl-mpc-derive/src/traits/: group_elem.rs  hard_derive_root.rs  hard_derive_signing.rs  hash_to_curve.rs  mod.rs
crates/sl-mpc-vrf/: CHANGELOG.md  Cargo.toml  README.md
crates/sl-mpc-vrf/src/: crypto.rs  dh_tuple.rs  lib.rs  messages.rs  transcript.rs  types.rs
crates/sl-mpc-vrf/src/dkg/: context.rs  crypto.rs  error.rs  messages.rs  mod.rs
crates/sl-mpc-vrf/src/eval/: context.rs  mod.rs
examples/: keygen.rs  keygen_server.rs  recovery.rs  refresh.rs  sign.rs  stress_test.rs
src/: derive.rs  ed25519_vrf_derive.rs  lib.rs  soft_derive.rs
src/common/: dlog_proof.rs  encryption.rs  math.rs  mod.rs  poly.rs  redpallas.rs  soft_derive.rs  storage.rs  transcript.rs  utils.rs
src/derive/: derivation.rs  mod.rs
src/keygen/: client.rs  dkg.rs  hard_derive_root.rs  messages.rs  mod.rs  refresh.rs  server.rs  session.rs  types.rs  utils.rs
src/orchard/: derivation.rs  mod.rs
src/quorum_change/: messages.rs  mod.rs  pairs.rs  qc.rs  types.rs
src/sign/: auth_data.rs  dsg.rs  eddsa.rs  messages.rs  mod.rs  presign.rs  reddsa.rs  shared_rounds.rs  taproot.rs  types.rs
src/vrf/: dkg.rs  eval.rs  hard_derivation.rs  messages.rs  mod.rs  types.rs
