[package]
name = "multi-party-schnorr"
version = "1.2.0-pre.1"
edition = "2021"
license-file = "LICENSE"
description = "Multi party schnorr protocol"
repository = "https://github.com/silence-laboratories/multi-party-schnorr"
keywords = ["mpc", "threshold_signatures", "schnorr"]
readme = "README.md"
rust-version = "1.88"

[[example]]
name = "sign"
required-features = [ "eddsa", "test-support" ]

[[example]]
name = "keygen"
required-features = [ "eddsa", "test-support" ]

[[example]]
name = "refresh"
required-features = [ "eddsa", "test-support" ]

[features]
default = ["eddsa", "session"]
eddsa = ["curve25519-dalek", "ed25519-dalek"]
taproot = ["k256/schnorr"]
redpallas = ["dep:pasta_curves", "dep:group", "dep:rand_core", "dep:blake2b_simd", "dep:reddsa"]
keyshare-session-id = []
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "curve25519-dalek/serde",
  "ed25519-dalek/serde",
  "k256/serde",
  "k256/pkcs8",
  "sl-mpc-mate/serde",
  "crypto_box/serde",
  "pasta_curves?/serde",
]
session = ["serde", "dep:ciborium"]
test-support = []

[dependencies]
zeroize = { version = "1.6.1", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.15", optional = true }
signature = { version = "2.2.0" }
bytemuck = { version = "1.22", features = [
  "derive",
  "min_const_generics",
  "extern_crate_alloc",
] }
elliptic-curve = { version = "0.13" }
ed25519-dalek = { version = "2.1.0", features = [
  "zeroize",
  "rand_core",
  "digest",
], optional = true }
curve25519-dalek = { version = "~4.1.3", features = [
  "digest",
  "group",
], optional = true }
k256 = { version = "0.13.2", default-features = false, optional = true }
crypto-bigint = "0.5"
rand = "0.8"
sha2 = "0.10.7"
crypto_box = { version = "0.9.1" }
ff = "0.13.0"
rand_chacha = "0.3.1"
sl-mpc-mate = "1.1.0"
thiserror = "1"
derivation-path = "0.2.0"
hmac = { version = "0.12.1" }
ciborium = { version = "0.2", optional = true }
group = { version = "0.13.0", optional = true }
pasta_curves = { version = "0.5", default-features = false, optional = true }
rand_core = { version = "0.6.4", optional = true }
reddsa = { version = "0.5", optional = true }
blake2b_simd = { version = "1", default-features = false, optional = true }

[dev-dependencies]
k256 = { version = "0.13.2" }
bs58 = "0.5.0"
ciborium = "0.2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
