[package]
name = "sl-mpc-vrf"
version = "0.1.0-pre.2"
edition = "2021"
license-file = "../../LICENSE"
description = "Threshold MPC VRF wire protocols on Ristretto (DKG + eval)"
repository = "https://github.com/silence-laboratories/multi-party-schnorr"
readme = "README.md"
rust-version = "1.88"

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes", "curve25519-dalek/serde", "sl-mpc-mate/serde"]

[dependencies]
sl-mpc-derive = { version = "0.1.0", default-features = false, features = ["vrf"] }
sl-mpc-mate = "1.1.0"
curve25519-dalek = { version = "~4.1.3", features = ["digest", "group"] }
elliptic-curve = { version = "0.13" }
crypto-bigint = "0.5"
ff = "0.13.0"
rand = "0.8"
rand_chacha = "0.3.1"
sha2 = "0.10.7"
sl-transcript = { version = "0.1.0-pre.2", default-features = false }
thiserror = "1"
zeroize = { version = "1.6.1", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
rand = "0.8"
